# whip-take-home

./: .gitignore  App.tsx  README.md  app.json  jest.config.js  package-lock.json  package.json
__tests__/: backpressure.test.ts
__tests__/security/: directionConfusion.test.ts  fetchGuard.test.ts  prototypePoison.test.ts  tokenValidation.test.ts
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  WhipStorageHostObject.cpp
android/app/src/main/cpp/jsi/: WhipStorageHostObject.cpp  WhipStorageHostObject.h
android/app/src/main/java/com/whipbridge/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/whipbridge/jsi/: WhipJSIInstaller.kt
android/app/src/main/java/com/whipbridge/modules/: WhipMetricsModule.kt  WhipMetricsPackage.kt
android/app/src/main/res/values/: strings.xml
assets/miniapps/: attack-01-prototype-pollution.html  attack-02-direction-confusion.html  attack-03-token-forgery.html  attack-04-ssrf.html  attack-05-capability-bypass.html  attack-06-oversized-payload.html  demo.html
ios/: Podfile
ios/WhipBridge/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  WhipBridge-Bridging-Header.h  WhipRNDelegate.h  WhipRNDelegate.mm
ios/WhipBridge.xcodeproj/: project.pbxproj
ios/WhipBridge.xcodeproj/xcshareddata/xcschemes/: WhipBridge.xcscheme
ios/WhipBridge.xcworkspace/: contents.xcworkspacedata
ios/WhipBridge/NativeModules/WhipMetrics/: WhipMetrics.mm
ios/WhipJSI/: WhipJSI.podspec  WhipJSIInstaller.h  WhipJSIInstaller.mm  WhipStorageHostObject.h  WhipStorageHostObject.mm
src/bridge/: Backpressure.ts  BridgeClient.ts  BridgeHost.ts  CapabilityRouter.ts  errors.ts  protocol.ts  sanitize.ts
src/bridge/capabilities/: FetchHandler.ts  HapticsHandler.ts  StorageHandler.ts
src/components/: MetricsOverlay.tsx  MiniAppContainer.tsx
src/miniapps/: miniApps.ts
src/native/: NativeWhipMetrics.ts
